--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="">
+  <title>PMV (PDF Manga Viewer)</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="pdf.js"></script>
   <script type="text/javascript" src="pdf.worker.js"></script>
