--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <input id='pdf' type='file' accept="application/pdf">
+  <h1 id="filename"></h1>
   <div id="pages">
     <canvas id="canvas-left"></canvas>
     <canvas id="canvas-right"></canvas>
